# flet-gemini

./: README.md  mkdocs.yml  pyproject.toml
docs/: FletGemini.md  index.md
examples/flet_gemini_example/: pyproject.toml
examples/flet_gemini_example/src/: main.py
src/flet_gemini/: __init__.py  flet_gemini.py
src/flutter/flet_gemini/: README.md  pubspec.yaml
src/flutter/flet_gemini/lib/: flet_gemini.dart
src/flutter/flet_gemini/lib/src/: create_control.dart  flet_gemini.dart
